# deep-learning-project

./: .gitignore  model-trainer.code-workspace  readme.md
app/: Cargo.toml  Trunk.toml  index.html
app/public/: end2end.onnx  end2end_b1.onnx  end2end_b1_dyn.onnx  end2end_b2.onnx  end2end_v2.onnx  index.bundle.mjs
app/src/: app.rs  lib.rs  main.rs
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: main.json  mobile.json
app/src-tauri/src/: lib.rs
app/src/components/: bookmark_dialog.rs  card.rs  cover_view.rs  face_analysis_drawer.rs  icon.rs  mod.rs  navigation_bar.rs  screen.rs  setting-menu.rs  setting_menu.rs  web_cam_render.rs
app/src/components/card/: template.html
app/src/data/: face_actor.rs  face_description.rs  face_hair_style.rs  mod.rs
app/style/: main.scss
app/style/components/: bookmark_dialog.scss  card.scss  cover_view.scss  drawer.scss  face_analysis_drawer.scss  navigation_bar.scss  render_view.scss  screen.scss  setting_menu.scss
model-trainer/: .gitignore  annotation.py  assignment copy.ipynb  assignment.ipynb  environment.yml  makefile  requirements.txt
model-trainer/dataset/face_shape/: test.parq.gzip  train.parq.gzip
model-trainer/model/mmdeploy_output/b1/yolox_tiny__face_shape/: detail.json  pipeline.json
model-trainer/model/mmdeploy_output/yolox_tiny__face_shape/: deploy.json  detail.json  end2end.onnx  pipeline.json
model-trainer/src/face_shape/: extraction.py  extraction_copy.py  main.ipynb  main_convnextv2.ipynb  main_huggingface-1.ipynb  main_huggingface.ipynb  main_keras_cv.ipynb  main_sub.py  safetensor.ipynb  util.py
web-app/: README.md  bun.lockb  index.ts  index_v0.ts  index_v1.ts  index_v2.ts  package.json
