[package]
name = "app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
# leptos_dom = { version = "0.6", features = ["csr"] }
leptos_animated_for = "0.4"
leptonic = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.6.9", features = ["csr"] }
leptos-use = "0.10"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0"
serde = { workspace = "true" }
serde_json = { workspace = "true" }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

icondata = "0.3.0"
icondata_core = "0.1.0"


tokio= {version = "*", features=["default" , "time" , "sync"]}

reqwest = { version = "0.12", features = ["json"] }


[workspace]
members = ["src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"



[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "style"
# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"


[build]
# `leptonic` depends on some `leptos-use` functions requiring this opt-in. This may change in the future.
rustflags = ["--cfg=web_sys_unstable_apis"]
