[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["devtools"] }
tauri-build = "2.0.0-beta"
tauri-plugin = {  version = "2.0.0-beta", features = ["build"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-sql = { version = "2.0.0-beta", features = ["sqlite"] }
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-barcode-scanner = "2.0.0-beta"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"

# tauri-plugin-devtools = { git = "https://github.com/crabnebula-dev/devtools", version = "2.0.0-beta.0" }
# [target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
# tauri-plugin-barcode-scanner = "2.0.0-beta"
# tauri-plugin-barcode-scanner = "2.0.0-beta"
# tauri-plugin-camera = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/camera" }


